--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,46 @@ services:
   zerocrate:
     build: .
     image: zerocrate:local
-    user: "10001:10001" # Matches appuser UID/GID if strictly defined, or let the Dockerfile USER directive handle it
+    user: "10001:10001"
     ports:
       - "8000:8000"
     environment:
       - LOG_LEVEL=INFO
-    volumes:
-      # Mount data directory for persistence locally
-      # In production, this would be an external database URL
-      - ./data:/app/data
-    read_only: false # Python needs to write pyc files potentially, though we disabled cache.. actually app writes to data/
-    # Security: Drop all capabilities, add only what is needed (none usually for web app)
+      - DATABASE_URL=postgresql://user:password@db:5432/zerocrate
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - db
+      - redis
+    read_only: false
     cap_drop:
       - ALL
     security_opt:
       - no-new-privileges:true
+
+  db:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=zerocrate
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U user -d zerocrate" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:7-alpine
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
+  redis_data:
